# tomtax

./: README.md  justfile  pyproject.toml
src/: main.py
src/data/: data_source.txt  exchange_rates.csv
src/tests/: test_capital_gains.py  test_transaction.py
src/tomtax/: capital_gains.py  exchange_rates.py  transaction.py
